[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/starfield.png" type="Texture" id=7]
[ext_resource path="res://art/farback.png" type="Texture" id=8]
[ext_resource path="res://scenes/bgmain.gd" type="Script" id=9]
[ext_resource path="res://scenes/bgstar.gd" type="Script" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Game" type="Node"]
script = ExtResource( 2 )
enemy_prefab = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 1782 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 250, -150 )
rotation = -1.5708
texture = ExtResource( 8 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 800 )
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 250, 350 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 2
visible = false

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startpos" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="enemypath" type="Path2D" parent="."]
visible = false
curve = SubResource( 1 )

[node name="enemyspawn" type="PathFollow2D" parent="enemypath"]

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="musicbgm" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[node name="deathbgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="hit_player" from="Player" to="." method="gameover"]
[connection signal="paused" from="Player" to="." method="pause_toggle"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timeout"]
[connection signal="start_game" from="UI" to="." method="new_game"]
